--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -209,6 +209,7 @@ docker run -d --init \
 --publish 2154:2154/tcp \
 --publish 8080:8080/tcp \
 --name validator \
+--network host \
 --mount type=bind,source=$HOME/validator_data,target=/var/data \
 quay.io/team-helium/validator:latest-validator-amd64
 ```
@@ -243,21 +244,20 @@ quay.io/team-helium/validator:latest-validator-amd64
   **_image_** for the Validator that is tagged as the "latest" for the amd64 architecture. For arm
   architectures, replace with `latest-validator-arm64`.
 
-Additional flags if your host machine is behind a firewall that is performing Network Address
-Translation (NAT): Adding all four of these flags will assist the Validator to quickly determine the
-external IP address of the host machine. You must add all four flags for any of them to take effect:
-
-- `-e "NAT_INTERNAL_IP=192.168.0.139"` Replace the IP with your local IP shown when running
-  `ip addr`.
-- `-e "NAT_EXTERNAL_IP=$( curl -s ipv4.icanhazip.com )"` This assists the Validator in quickly
-  identifying the external IP of the NAT. The `curl` command simply queries an external provider and
-  returns the public IP address of the interface. You can replace the
-  `$( curl -s ipv4.icanhazip.com )` with your external IP, if you know what your external IP is and
-  know that it will not change (static IP).
-- `-e "NAT_INTERNAL_PORT=2154"` Replace the port number with the port you've assigned to the
+- If your host machine is behind a firewall that is performing Network Address Translation (NAT),
+  add **all** four of these `NAT_`variables to assist the Validator in quickly determining the
+  external IP address of the host machine. **NOTE**: You must add **ALL** four variables, for any
+  one of them to take effect:
+- `-e "NAT_INTERNAL_IP=192.168.0.139"` - Replace `192.168.0.139` with your local IP shown when
+  running ip addr`.
+- `-e "NAT_EXTERNAL_IP=$( curl -s ipv4.icanhazip.com )"` - Determines the external IP of the NAT.
+  The curl command queries an external provider and returns the public IP address of the interface.
+  You can replace `$( curl -s ipv4.icanhazip.com )` with your external IP, if you have a static IP
+  that you know will not change.
+- `-e "NAT_INTERNAL_PORT=2154"` - Replace the port number with the port you've assigned to the
   validator, if not using the default 2154.
-- `-e "NAT_EXTERNAL_PORT=2154"` Replace the port number with the port you've opened on the firewall,
-  if not using the default 2154.
+- `-e "NAT_EXTERNAL_PORT=2154"` - Replace the port number with the port you've opened on the
+  firewall, if not using the default 2154.
 
 Once you run the command above, docker will retrieve the latest Validator image, and start the
 docker process. Barring any errors, your Validator is running.
@@ -536,28 +536,44 @@ override the default values. This is the most straightforward way to configure y
 Environment variables may be set in the shell session used to launch the miner, within a systemd
 service file, part of a docker run command, or included in a docker-compose file.
 
-- LISTEN_ADDRESS (default: `/ip4/0.0.0.0/tcp/2154/`) - the address that the miner will listen to on
-  the P2P network; currently only a single IP4 address is supported and it must be in
+- `LISTEN_ADDRESS` (default: `/ip4/0.0.0.0/tcp/2154/`) - the address that the miner will listen to
+  on the P2P network; currently only a single IP4 address is supported and it must be in
   [multiaddr](https://github.com/multiformats/multiaddr) format. This address must be publicly
   accessible.
-- BASE_DIR (default: `data`) - Directory location of data files. May be absolute or relative path.
+- `BASE_DIR` (default: `data`) - Directory location of data files. May be absolute or relative path.
   Relative paths are relative to miner install location.
-- LOG_ROOT (default: `log`) - Directory location of log files. May be absolute or relative path.
+- `LOG_ROOT` (default: `log`) - Directory location of log files. May be absolute or relative path.
   Relative paths are relative to miner install location.
-- UPDATE_DIR (default: `/opt/miner/update`) - Location that the miner looks in for a genesis block
+- `UPDATE_DIR` (default: `/opt/miner/update`) - Location that the miner looks in for a genesis block
   on startup. If a new genesis block found, the existing data dir will be removed and the new
   genesis block loaded.
-- HOTFIX_DIR (default: `/opt/miner/hotfix`) - Location that the miner looks in for code hotfixes.
-- GRPC_PORT (default: `8080`) - Port used by light gateways to interact with the validator. This
+- `HOTFIX_DIR` (default: `/opt/miner/hotfix`) - Location that the miner looks in for code hotfixes.
+- `GRPC_PORT` (default: `8080`) - Port used by light gateways to interact with the validator. This
   port must be publicly accessible.
-- JSONRPC_IP (default: `127,0,0,1`) - IP address that the JSON RPC endpoint listens on. JSRONRPC is
-  used for monitoring and interacting with the validator.
-- JSONRPC_PORT (default: `4467`) - Port number that the JSON RPC endpoint listens on.
-- VALIDATION_WIDTH - Maximum number of concurrent transaction validations that the miner will do
+- `JSONRPC_IP` (default: `127,0,0,1`) - IP address that the JSON RPC endpoint listens on. JSRONRPC
+  is used for monitoring and interacting with the validator.
+- `JSONRPC_PORT` (default: `4467`) - Port number that the JSON RPC endpoint listens on.
+- `VALIDATION_WIDTH` - Maxium number of concurrent transaction validations that the miner will do
   when absorbing blocks. Default is N/2 + 1 where N is the number of Erlang schedulers which is by
   default the number of CPUs/vCPUs.
-- SIDECAR_PARALLELISM_LIMIT (default: `3`) - Maximum number of concurrent transaction validations
+- `SIDECAR_PARALLELISM_LIMIT` (default: `3`) - Maximum number of concurrent transaction validations
   the miner will attempt while in consensus group.
+- If your host machine is behind a firewall that is performing Network Address Translation (NAT),
+  add **all** four of these `NAT_`variables to assist the Validator in quickly determining the
+  external IP address of the host machine.
+- **NOTE**: You must add **ALL FOUR** variables, for any one of them to take effect.
+- NOTE: Expand [Run the Docker Container](#run-the-docker-container) section for details on adding
+  these variables to a validator running in Docker.
+- `NAT_INTERNAL_IP=192.168.0.139` - Replace `192.168.0.139` with your local IP shown when running
+  `ip addr`.
+- `NAT_EXTERNAL_IP=$( curl -s ipv4.icanhazip.com )` - Determines the external IP of the NAT. The
+  curl command queries an external provider and returns the public IP address of the interface. You
+  can replace `$( curl -s ipv4.icanhazip.com )` with your external IP, if you have a static IP that
+  you know will not change.
+- `NAT_INTERNAL_PORT=2154` - Replace the port number with the port you've assigned to the validator,
+  if not using the default 2154.
+- `NAT_EXTERNAL_PORT=2154` - Replace the port number with the port you've opened on the firewall, if
+  not using the default 2154.
 
 ### Erlang sys.config overlay
 
