DC o USD typo corrected.
The price of Data Credits is fixed in USD (1 Data Credit = $0.00001). so 100,000 DC = $1 USD

--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -67,11 +67,11 @@ more data.
 
 Unless otherwise specified, API calls return values in the following units:
 
-| value        | Units        | Conversion to HNT             |
+| value        | Units        | Conversion                    |
 | ------------ | ------------ | ----------------------------- |
 | `amount`     | bones        | `100,000,000 bone` to `1 HNT` |
 | `balance`    | bones        | `100,000,000 bone` to `1 HNT` |
 | `stake`      | bones        | `100,000,000 bone` to `1 HNT` |
 | `sum`        | bones        | `100,000,000 bone` to `1 HNT` |
-| `fee`        | Data Credits | `100,000 DC` to `1 HNT`       |
-| `dc_balance` | Data Credits | `100,000 DC` to `1 HNT`       |
+| `fee`        | Data Credits | `100,000 DC` to `$1 USD`      |
+| `dc_balance` | Data Credits | `100,000 DC` to `$1 USD`      |
