Sets up pre-mine page

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -119,7 +119,8 @@ Before normal emissions of MOBILE begin,
 [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) defined an earlier
 launch of MOBILE tokens assigning a premine amount of MOBILE to the Helium Foundation. The Helium
 Foundation will work with the core developers to begin the Genesis period of MOBILE rewards. Genesis
-rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool.
+rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool. Read more about the 
+pre-mine distribution [here](/5g-on-helium/mobile-pre-mine).
 
 Currently, the Helium Foundation intends to issue 100M tokens per day in the Genesis period, and it
 will be proportionally distributed to all active 5G Small Cell Radios as described below.
