--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -46,5 +46,6 @@ Helium Blockchain. This will immediately allow any online 5G Hotspot with a Smal
 MOBILE tokens.
 
 50B of 250B MOBILE is pre-mined as specified in the
-[Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
-and deposited to the Helium Foundation.
+[Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview) 
+in the community-approved HIP 53 and deposited to the Helium Foundation. For more information on the 
+pre-mine and how it is used, see [Pre-Mine](/5g-on-helium/mobile-pre-mine).
