--- a/docs/5g-on-helium/mobile-premine.mdx
+++ b/docs/5g-on-helium/mobile-premine.mdx
@@ -20,7 +20,7 @@ The Helium Foundation will work with the core developers to initiate the Genesis
 
 The Helium Foundation will distribute grants to teams making core contributions to the development of the MOBILE subDAO. Grants will be distributed based on defined deliverables and milestones.
 
-The Nova Labs team will be the first grant recipient for work-in-progress and ongoing development for the MOBILE subDAO. This is spread across three deliverables with 5B MOBILE per milestone (“MS”):
+The Nova Labs team will be the first grant recipient for work-in-progress and ongoing development for the MOBILE subDAO. This is spread across three deliverables with 5B MOBILE per milestone (“MS”) for a total grant of 15B MOBILE:
 
 MS 1: Ability for 5G Hotspots to earn MOBILE (by August 2022)<br/>
 MS 2: Development and release of programmatic treasury (by October 2022)<br/>
