billions and billions

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -105,7 +105,7 @@ maintaining a valid connection to the SAS.
 
 ## Emissions Curve
 
-There will be a max supply of 250B MOBILE with issuance halvenings of every 2 years aligned with the
+There will be a max supply of 250B (Billion) MOBILE with issuance halvenings of every 2 years aligned with the
 HNT issuance halvenings. The first halving will occur on August 1, 2023, to align with HNT halving
 and will continue on a 2-year cycle afterward. This creates a "stub period" as defined by
 [HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) which will begin
@@ -122,7 +122,7 @@ Foundation will work with the core developers to begin the Genesis period of MOB
 rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool. Read more about the 
 pre-mine distribution [here](/5g-on-helium/mobile-pre-mine).
 
-Currently, the Helium Foundation intends to issue 100M tokens per day in the Genesis period, and it
+Currently, the Helium Foundation intends to issue 100M (Million) tokens per day in the Genesis period, and it
 will be proportionally distributed to all active 5G Small Cell Radios as described below.
 
 ## Small Cell Radio Reward Scaling
