--- a/docs/5g-on-helium/mobile-premine.mdx
+++ b/docs/5g-on-helium/mobile-premine.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Pre-Mine Use of Funds
 
-As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md), and [approved by a community-wide vote](https://heliumvote.com/14rifUhocpzdwsrWaG5PDbdREDkzyesKe1hXuWzibv8h9DdqKLe), the Helium Foundation receives an allocation of 50B MOBILE tokens in the form of a pre-mine.
+As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md), and [approved by a community-wide vote](https://heliumvote.com/14rifUhocpzdwsrWaG5PDbdREDkzyesKe1hXuWzibv8h9DdqKLe), the Helium Foundation receives an allocation of 50B (Billion) MOBILE tokens in the form of a pre-mine.
 
 The use of proceeds are roughly defined as follows:
 
