--- a/docs/5g-on-helium/mobile-premine.mdx
+++ b/docs/5g-on-helium/mobile-premine.mdx
@@ -8,13 +8,13 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Pre-Mine Use of Funds
 
-As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md), and [approved by a community-wide vote](https://heliumvote.com/14rifUhocpzdwsrWaG5PDbdREDkzyesKe1hXuWzibv8h9DdqKLe), the Helium Foundation receives an allocation of 50B (Billion) MOBILE tokens in the form of a pre-mine.
+As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) and [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview), and [approved by community-wide votes](https://heliumvote.com/14rifUhocpzdwsrWaG5PDbdREDkzyesKe1hXuWzibv8h9DdqKLe), the Helium Foundation receives an allocation of 50B (Billion) MOBILE tokens in the form of a pre-mine.
 
 The use of proceeds are roughly defined as follows:
 
 **Genesis Period Rewards: 10B MOBILE**
 
-The Helium Foundation will work with the core developers to initiate the Genesis period of MOBILE rewards. 100M tokens will be programmatically issued per day to all active Helium 5G Hotspots miners during the Genesis period. Details of the proportional distribution for active 5G Small Cell Radios [can be found here.](/5g-on-helium/mining-5g) Any MOBILE not used during the Genesis period may be reallocated to Grants and Operations.
+The Helium Foundation will work with the core developers to initiate the Genesis period of MOBILE rewards. 100M (Million) tokens will be programmatically issued per day to all active Helium 5G Hotspots miners during the Genesis period. Details of the proportional mining rewards for active 5G Small Cell Radios [can be found here.](/5g-on-helium/mining-5g) Any MOBILE not mined during the Genesis period may be reallocated to Grants and Operations.
 
 **Grants and Operations: 30B MOBILE**
 
