fix double "Hotspots miners"

--- a/docs/5g-on-helium/mobile-premine.mdx
+++ b/docs/5g-on-helium/mobile-premine.mdx
@@ -20,9 +20,9 @@ The use of proceeds are roughly defined as follows:
 
 The Helium Foundation will work with the core developers to initiate the Genesis period of MOBILE
 rewards. 100M (million) tokens will be programmatically issued per day to all active Helium 5G
-Hotspots miners during the Genesis period. Details of the proportional mining rewards for active 5G
-Small Cell Radios [can be found here.](/5g-on-helium/mining-5g) Any MOBILE not mined during the
-Genesis period may be reallocated to Grants and Operations.
+Hotspots during the Genesis period. Details of the proportional mining rewards for active 5G Small
+Cell Radios [can be found here.](/5g-on-helium/mining-5g) Any MOBILE not mined during the Genesis
+period may be reallocated to Grants and Operations.
 
 **Grants and Operations: 30B MOBILE**
 
