Sets up MOBILE pre-mine information page (#985)
* Sets up pre-mine page

* update deliverables

* billions and billions

* Typo fix

* edits

* lowercase :b: :m:

* :leftwards_arrow_with_hook: Hard line wraps

* fix double "Hotspots miners"

* rename file

* :heavy_plus_sign: page title

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -45,6 +45,7 @@ allows for the creation of MOBILE tokens that will reward 5G Hotspot operators o
 Helium Blockchain. This will immediately allow any online 5G Hotspot with a Small Cell Radio to mine
 MOBILE tokens.
 
-50B of 250B MOBILE is pre-mined as specified in the
+50B (billion) of 250B MOBILE is pre-mined as specified in the
 [Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
-and deposited to the Helium Foundation.
+in the community-approved HIP 53 and deposited to the Helium Foundation. For more information on the
+pre-mine and how it is used, see [Pre-Mine](/5g-on-helium/mobile-pre-mine).
