--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -35,7 +35,7 @@ Refer to the 5G Hotspot Maker installation guides for specific instructions.
 Instructions on installing a CBRS Small Cell Radio and registration with the SAS are provided by the
 individual 5G Hotspot Makers.
 
-For FreefomFi Gateways refer to the installation guides here:
+For FreedomFi Gateways refer to the installation guides here:
 
 - [FreedomFi Indoor Install Guide](https://freedomfi.com/freedomfi-indoor-cbrs-small-cell-setup-guide/)
 - [FreedomFi Outdoor Install Guide](https://freedomfi.com/freedomfi-outdoor-cbrs-small-cell-setup-guide/)
@@ -105,24 +105,26 @@ maintaining a valid connection to the SAS.
 
 ## Emissions Curve
 
-There will be a max supply of 250B MOBILE with issuance halvenings of every 2 years aligned with the
-HNT issuance halvenings. The first halving will occur on August 1, 2023, to align with HNT halving
-and will continue on a 2-year cycle afterward. This creates a "stub period" as defined by
-[HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) which will begin
-when normal emissions of MOBILE tokens begin (and MOBILE can be redeemed by HNT in the subDAO's
-treasury). The date for this is currently TBD and dependent on core developers implementing the HNT
-token treasury and redemption transactions on the Helium Blockchain. This is defined as Phase 2 of
-[HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) for all new
-subDAOs.
+There will be a max supply of 250B (billion) MOBILE with issuance halvenings of every 2 years
+aligned with the HNT issuance halvenings. The first halving will occur on August 1, 2023, to align
+with HNT halving and will continue on a 2-year cycle afterward. This creates a "stub period" as
+defined by [HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) which
+will begin when normal emissions of MOBILE tokens begin (and MOBILE can be redeemed by HNT in the
+subDAO's treasury). The date for this is currently TBD and dependent on core developers implementing
+the HNT token treasury and redemption transactions on the Helium Blockchain. This is defined as
+Phase 2 of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) for all
+new subDAOs.
 
 Before normal emissions of MOBILE begin,
 [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) defined an earlier
 launch of MOBILE tokens assigning a premine amount of MOBILE to the Helium Foundation. The Helium
 Foundation will work with the core developers to begin the Genesis period of MOBILE rewards. Genesis
-rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool.
+rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool. Read more about the
+pre-mine distribution [here](/5g-on-helium/mobile-pre-mine).
 
-Currently, the Helium Foundation intends to issue 100M tokens per day in the Genesis period, and it
-will be proportionally distributed to all active 5G Small Cell Radios as described below.
+Currently, the Helium Foundation intends to issue 100M (million) tokens per day in the Genesis
+period, and it will be proportionally distributed to all active 5G Small Cell Radios as described
+below.
 
 ## Small Cell Radio Reward Scaling
 
