--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -147,7 +147,7 @@ details with the given staking provider.
 
 | Provider                                                     | Non-custodial full node | Pooling     | Pricing                                                             | Notes                                                                       | Discord Server                                |
 | :----------------------------------------------------------- | :---------------------- | :---------- | :------------------------------------------------------------------ | :-------------------------------------------------------------------------- | :-------------------------------------------- |
-| [Allnodes](https://www.allnodes.com)                         | Yes                     | No          | $80 per month (Basic) or $0.2380 per hour (Advanced)                |
+| [Allnodes](https://www.allnodes.com/hnt)                     | Yes                     | No          | $40 per month (Basic) or $0.1190 per hour (Advanced)                |
 | [Argon.build](https://www.argon.build)                       | Yes                     | No          | 3% comission on earnings                                            |
 | [Bison Trails (Coinbase Cloud)](https://www.bisontrails.co)  | Yes                     | No          |                                                                     | Does not offer service to individuals who plan to run fewer than 10 nodes   |
 | [Blockdaemon](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                         | Cloud offerings.                                                            |
