--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -394,7 +394,7 @@ frequency plan for use in your country.
 
 | Country                 | Frequency Plan |
 | ----------------------- | -------------- |
-| Pakistan                | IN865          |
+| Pakistan                | AS923-1        |
 | Palau                   | Unknown        |
 | Palestinian Territories | Unknown        |
 | Panama                  | AU915          |
