--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -344,7 +344,7 @@ frequency plan for use in your country.
 | North Macedonia  | EU868          |
 | Madagascar       | EU868          |
 | Malawi           | Unknown        |
-| Malaysia         | AS923_1        |
+| Malaysia         | AS923_1B       |
 | Maldives         | Unknown        |
 | Mali             | EU433          |
 | Malta            | EU868          |
