Update frequency-plans.mdx (#988)
* Update frequency-plans.mdx

Changed Pakistan to AS923-1 from IN865

* Update frequency-plans.mdx

Co-authored-by: Michael Vierling <mvierling@gmail.com>

--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -344,7 +344,7 @@ frequency plan for use in your country.
 | North Macedonia  | EU868          |
 | Madagascar       | EU868          |
 | Malawi           | Unknown        |
-| Malaysia         | AS923_1        |
+| Malaysia         | AS923_1B       |
 | Maldives         | Unknown        |
 | Mali             | EU433          |
 | Malta            | EU868          |
@@ -394,7 +394,7 @@ frequency plan for use in your country.
 
 | Country                 | Frequency Plan |
 | ----------------------- | -------------- |
-| Pakistan                | IN865          |
+| Pakistan                | AS923-1        |
 | Palau                   | Unknown        |
 | Palestinian Territories | Unknown        |
 | Panama                  | AU915          |
