--- a/docs/api/home.mdx
+++ b/docs/api/home.mdx
@@ -12,10 +12,9 @@ The Helium Network currently exposes the following APIs:
   helium blockchain.
 - [Console API](/api/console) - Provides programatic access to your organization's sensor data on
   Helium console instances.
-  
-  Note: the free to use Foundation Console [console.helium.com](https://console.helium.com)
-  does not support the Console API.
-  
-  Console providors that do support the Console API are found at [Console Hosting Providers](https://docs.helium.com/use-the-network/console/hosting-providers)
-  
-  
+
+  Note: the free to use Foundation Console [console.helium.com](https://console.helium.com) does not
+  support the Console API.
+
+  Console providors that do support the Console API are found at
+  [Console Hosting Providers](https://docs.helium.com/use-the-network/console/hosting-providers)
