--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -12,9 +12,9 @@ This space provides information about Console Hosting Providers available in the
 this is not an exhaustive list, and if you’d like to add your company feel free to make a pull
 request: https://github.com/helium/docs
 
-:::info 
+:::info
 
-Links and information for these Console Hosting Providers is provided as is. 
+Links and information for these Console Hosting Providers is provided as is.
 
 :::
 
@@ -26,8 +26,8 @@ out to the given provider.
   [here](https://www.helium-iot.eu/use-helium-with-helium-iot-europe/).
 - Ubidots - Power your IoT and cloud applications with Ubidots. Sign up for beta
   [here](https://bit.ly/3JygTvn).
-- Foundation Console - For demo and educational purposes. Capped at 10 devices and a single
-  Organization. Sign up [here](https://console.helium.com/).
+- Foundation Console - Free for demo and educational purposes. Capped at 10 devices, a single
+  Organization and no API access. Sign up [here](https://console.helium.com/).
 - Nova Console - contact sales@nova-labs.com.
 - BrDot Console - Console Hosting Provider based in Brazil. For more information contact
   sales@brdot.co.
