--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -30,11 +30,11 @@ differs depending on your operating system, but is a common task and easily sear
 
 At any time, use `--help` to see the most recent documentation and help for the CLI wallet.
 
-At time of this writing, version 1.6.0 looks like this:
+At time of this writing, version 1.7.5 looks like this:
 
 ```
 $ helium-wallet --help
-helium-wallet 1.6.0
+helium-wallet 1.7.5
 Common options for most wallet commands
 
 USAGE:
@@ -59,7 +59,9 @@ OPTIONS:
 SUBCOMMANDS:
     balance       Get the balance for a wallet. The balance is given in HNT and has a precision of 8 decimals
     burn          Burn HNT to Data Credits (DC) from this wallet to given payees wallet
+    commit        Commit a transaction to the blockchain
     create        Create a new wallet
+    export        Export an encypted wallet seed as JSON
     help          Prints this message or the help of the given subcommand(s)
     hotspots      Display list of hotspots associated with wallet or transfer a hotspot to another wallet
     htlc          Create or Redeem from an HTLC address
@@ -67,10 +69,9 @@ SUBCOMMANDS:
     multisig      Commands multi signature transactions
     oracle        Report an oracle price to the blockchain
     oui           Create or update an OUI
-    pay           Send one (or more) payments to given addresses. If an input file is specified for multiple
-                  payments, the payee, amount and memo arguments are ignored
+    pay           Send one (or more) payments to given addresses
     request       Construct various request (like payment) in a QR code
-    securities    Work with security tokens
+    sign          Commands for signing or verifying data
     upgrade       Upgrade a wallet to the latest supported version of the given format. The same password is used to
                   decrypt the old and encrypt the new wallet
     validators    Commands for validators
@@ -123,7 +124,7 @@ always recommended to explore the help menu to learn more:
 ```
 $ helium-wallet create basic --help
 
-helium-wallet-create-basic 1.6.0
+helium-wallet-create-basic 1.7.5
 Create a new basic wallet
 
 USAGE:
@@ -132,14 +133,14 @@ USAGE:
 FLAGS:
         --force      Overwrite an existing file
     -h, --help       Prints help information
+        --seed       Use a BIP39 or mobile app seed phrase to generate the wallet keys
     -V, --version    Prints version information
 
 OPTIONS:
         --key-type <key-type>    The type of key to generate (ecc_compact/ed25519) [default: ed25519]
         --network <network>      The network to generate the wallet (testnet/mainnet) [default: mainnet]
     -o, --output <output>        Output file to store the key in [default: wallet.key]
-        --seed <seed>            Use a BIP39 or mobile app seed phrase to generate the wallet keys [possible values:
-                                 bip39, mobile]
+        --swarm <swarm>          Import a swarm_key file from a miner, gateway, validator, or other blockchain actor
 ```
 
 We'll go through a few examples next.
@@ -207,58 +208,164 @@ key and can submit transactions to the blockchain API.
 
 :::
 
+---
+
+## Export to Helium Wallet App
+
+Helium Wallets created using the CLI can be exported to the Helium Wallet App.
+
+:::note Version Requirements
+
+The `export` feature requires:
+
+- `helium-wallet-rs version 1.7.5` or later, available
+  [on Github](https://github.com/helium/helium-wallet-rs/tags)
+- [Helium Wallet App](/wallets/helium-wallet-app) version `1.3.0` or later, available for
+  [iOS](https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848) and
+  [Android](https://play.google.com/store/apps/details?id=com.helium.wallet.app)
+- Helium Wallet App must have `Developer Mode` turned `On`.
+
+:::
+
+### Export from CLI
+
+Assuming you have already created a CLI Wallet, exporting the wallet is straight forward. Simply
+run:
+
+```bash
+$ helium-wallet export
+```
+
+You will be prompted for the Wallet Password, (this is _not_ your 12-word or 24-word seed phrase,
+this password was input when the wallet was created.)
+
+Next, you will be prompted to enter an `Export Password` twice. This password will be used in the
+Helium Wallet App.
+
+A QR Code will be generated and shown in your terminal.
+
+<img src={useBaseUrl('img/wallets/cli-wallet/cli-export.png')} />
+
+### Import to Helium Wallet App
+
+Once you have generated a QR code and have your `Export Password` ready, open the Helium Wallet App
+and swipe to the `Import` Screen.
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img className="appscreen" src={useBaseUrl('img/wallets/cli-wallet/cli-import-scan.png')} />
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <b>
+        Step 1. Tap on the <b>CLI</b> option in the bottom Menu to begin.
+      </b>
+      <p>
+        Remember that you must first toggle on <code>Developer Mode</code> in Settings.
+      </p>
+    </div>
+  </div>
+  <hr></hr>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img className="appscreen" src={useBaseUrl('img/wallets/cli-wallet/cli-import-prereq.png')} />
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <b>Step 2. Scan the QR Code</b>
+      <p>
+        When you are ready, tap the <b>Scan QR Code</b> button and aim your phone camera at the QR
+        Code generated in your terminal.
+      </p>
+    </div>
+  </div>
+  <hr></hr>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img
+        className="appscreen"
+        src={useBaseUrl('img/wallets/cli-wallet/cli-import-password.png')}
+      />
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <b>
+        Step 3. Enter <code>Export Password</code>
+      </b>
+      <p>
+        After a successful scan, you will be prompted for the <code>Export Password</code> you
+        created as part of the <code>export</code> CLI command steps above.
+      </p>
+    </div>
+  </div>
+  <hr></hr>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img
+        className="appscreen"
+        src={useBaseUrl('img/wallets/cli-wallet/cli-import-decrypt.png')}
+      />
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <b>Step 4. Decrypt and Naming</b>
+      <p>
+        Tap the <b>Decrypt and Import</b> button, and give the newly imported wallet an identifiable
+        name.
+      </p>
+    </div>
+  </div>
+</div>
+
+---
+
 ## Pay Transaction Example
 
 If you explore the pay command, you will see the following:
 
-```
+```bash
 $ helium-wallet pay --help
-
-helium-wallet-pay 1.6.0
+helium-wallet-pay 1.7.5
 Send one (or more) payments to given addresses.
 
 The payment is not submitted to the system unless the '--commit' option is given.
 
 USAGE:
-helium-wallet pay [FLAGS] [OPTIONS] <SUBCOMMAND>
+    helium-wallet pay <SUBCOMMAND>
 
 FLAGS:
-    --commit
-        Commit the payment to the API
-    -h, --help
-        Prints help information
-    -V, --version
-        Prints version information
-
-[..]
+    -h, --help      Prints help information
+    -V, --version   Prints version information
 
 SUBCOMMANDS:
-help     Prints this message or the help of the given subcommand(s)
-multi    Multiple payees (requires file input). Check "helium-wallet pay multi --help" for details
-one      Single payee
+    help     Prints this message or the help of the given subcommand(s)
+    multi    Pay multiple payees
+    one      Pay a single payee
 ```
 
 Let's explore the `one` subcommand to figure out usage for a single payment:
 
-```
+```bash
 $ helium-wallet pay one --help
+helium-wallet-pay-one 1.7.5
+Pay a single payee.
 
-helium-wallet-pay-one 1.6.0
-Single payee
+Note that HNT only goes to 8 decimals of precision.
 
 USAGE:
-    helium-wallet pay one [OPTIONS] <address> <amount>
+    helium-wallet pay one [FLAGS] [OPTIONS] <address> <amount> [token]
 
 FLAGS:
-    -h, --help       Prints help information
-    -V, --version    Prints version information
+        --commit    Commit the payment to the API
+    -h, --help      Prints help information
+    -V, --version   Prints version information
 
 OPTIONS:
-        --memo <memo>    Memo field to include. Provide as a base64 encoded string [default: AAAAAAAAAAA=]
+    --fee <fee>         Manually set the DC fee to pay for the transaction
+    --memo <memo>       Memo field to include. Provide as a base64 encoded string [default: AAAAAAAAAAA=]
+    --nonce <nonce>     Manually set the nonce to use for the transaction
 
 ARGS:
-    <address>    Address to send the tokens to
-    <amount>     Amount of HNT to send
+    <address>   Address to send the tokens to
+    <amount>    Amount of token to send
+    <token>     Type of token to send (hnt, iot, mobile, hst) [default: hnt]
 ```
 
 The `USAGE` section is is very helpful: `helium-wallet pay one [OPTIONS] <address> <amount>`.
@@ -266,8 +373,8 @@ The `USAGE` section is is very helpful: `helium-wallet pay one [OPTIONS] <addres
 For example, if I want to send 5.0 HNT to `14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz5S`, it
 would look like this:
 
-```
-helium-wallet pay one 14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz5S 5 --commit
+```bash
+$ helium-wallet pay one 14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz5S 5 --commit
 ```
 
 The `--commit` FLAG is a global option to the `pay` command - you'll recall it was documented at the
@@ -278,7 +385,7 @@ When you commit a transaction to the API, you will be provided with a **transact
 a unique identifier for your transaction on the blockchain and you can track your transcation status
 using the API endpoint:
 
-```
+```bash
 https://api.helium.io/v1/pending_transactions/YOUR_HASH_HERE
 ```
 
