--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -226,7 +226,6 @@ The `export` feature requires:
 - [Helium Wallet App](/wallets/helium-wallet-app) version `1.3.0` or later, available for
   [iOS](https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848) and
   [Android](https://play.google.com/store/apps/details?id=com.helium.wallet.app)
-- Helium Wallet App must have `Developer Mode` turned `On`.
 
 :::
 
@@ -264,7 +263,8 @@ and swipe to the `Import` Screen.
         Step 1. Tap on the <b>CLI</b> option in the bottom Menu to begin.
       </b>
       <p>
-        Remember that you must first toggle on <code>Developer Mode</code> in Settings.
+        The CLI Import button is located at the bottom of the Import screen in the Helium Wallet
+        App.
       </p>
     </div>
   </div>
