--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -263,8 +263,8 @@ and swipe to the `Import` Screen.
         Step 1. Tap on the <b>CLI</b> option in the bottom Menu to begin.
       </b>
       <p>
-        The CLI Import button is located at the bottom of the Import screen in the Helium Wallet
-        App.
+        The **CLI** import button is located at the bottom of the **Import** screen in the Helium
+        Wallet App.
       </p>
     </div>
   </div>
