--- a/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
@@ -17,11 +17,11 @@ The kit includes a Wio Terminal master controller with WIFI/BLE and display, as 
 selected Grove - Wio-E5, Grove - VOC and eCO2 Gas Sensor SGP30, Grove - Soil Moisture Sensor,
 Grove - Temp&Humi Sensor (SHT40), and Grove - Vision AI Module. Humi Sensor (SHT40), and Grove -
 Vision AI Module. This kit is a perfect combination of LoRa® and Edge AI, which allows software
-engineers to quickly deploy their first LoRaWAN® projects through plug-and-play connectivity.
+engineers and every beginner to quickly deploy their first LoRaWAN® projects through plug-and-play connectivity.
 
 <img
   src={useBaseUrl(
-    'img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit.jpeg',
+    'img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-k1100-dev-kit.jpg',
   )}
 />
 
@@ -31,12 +31,14 @@ engineers to quickly deploy their first LoRaWAN® projects through plug-and-play
 
 ### Part List
 
-| Wio Terminal                                              | x1  |
+| Part List                                                 |     |
 | --------------------------------------------------------- | --- |
-| Grove - LoRa-E5                                           | x1  |
-| Grove-VOC and eCO2 Gas Sensor SGP30                       | x1  |
+| Wio Terminal                                              | x1  |
+| Grove - Wio-E5                                            | x1  |
+| Grove - VOC and eCO2 Gas Sensor SGP30                     | x1  |
 | Grove - Soil Moisture Sensor                              | x1  |
-| Grove - Temp&Humi Sensor(SHT40)                           | x1  |
+| Grove - Temp&Humi Sensor (SHT40)                          | x1  |
 | Grove - Vision AI Module                                  | x1  |
 | Grove - Cable                                             | x4  |
 | Grove - 4 pin Male Jumper to Grove 4 pin Conversion Cable | x1  |
+| USB Cable - Type C                                        | x1  |
