--- a/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
@@ -3,7 +3,9 @@ id: seeed-studio-lorawan-dev-kit
 hide_title: true
 title: SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI
 description:
-  SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI, it enables you to rapidly digitize the world using LoRaWAN® and solve real-world challenges. With this plug-and-play toolkit, anyone can add AI to their edge devices and unlock the potential of AIoT.
+  SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI, it enables you to rapidly digitize
+  the world using LoRaWAN® and solve real-world challenges. With this plug-and-play toolkit, anyone
+  can add AI to their edge devices and unlock the potential of AIoT.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit.jpeg
 sidebar_label: SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI
 slug: /use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit
@@ -17,7 +19,8 @@ The kit includes a Wio Terminal master controller with WIFI/BLE and display, as 
 selected Grove - Wio-E5, Grove - VOC and eCO2 Gas Sensor SGP30, Grove - Soil Moisture Sensor,
 Grove - Temp&Humi Sensor (SHT40), and Grove - Vision AI Module. Humi Sensor (SHT40), and Grove -
 Vision AI Module. This kit is a perfect combination of LoRa® and Edge AI, which allows software
-engineers and every beginner to quickly deploy their first LoRaWAN® projects through plug-and-play connectivity.
+engineers and every beginner to quickly deploy their first LoRaWAN® projects through plug-and-play
+connectivity.
 
 <img
   src={useBaseUrl(
