--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
@@ -201,7 +201,8 @@ integration, you need to set the device to work in
   )}
 />
 
-2. Datacake has ready-to-use TrackIt template. To add the device, click **LoRaWAN** and then **Next**.
+2. Datacake has ready-to-use TrackIt template. To add the device, click **LoRaWAN** and then
+   **Next**.
 
 <img
   src={useBaseUrl(
@@ -209,7 +210,8 @@ integration, you need to set the device to work in
   )}
 />
 
-3. On the next window, in the **Search** field, type **TrackIt** and choose the **Device Template**. Then click **Next**.
+3. On the next window, in the **Search** field, type **TrackIt** and choose the **Device Template**.
+   Then click **Next**.
 
 <img
   src={useBaseUrl(
@@ -220,19 +222,21 @@ integration, you need to set the device to work in
 4. On the next page, choose **Helium** for Network server and click **Next**.
 
 <img
-  src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak2171/18.choose-network.png'
+  src={useBaseUrl(
+    'img/use-the-network/devices/ready-to-use/rakwireless/rak2171/18.choose-network.png',
   )}
 />
 
-5. On the next page, type the **Dev EUI** and the **Name of your device**. You can add more than one device. You can also drag and drop a `.csv` file, and it automatically adds multiple devices at once. Then click **Next**.
+5. On the next page, type the **Dev EUI** and the **Name of your device**. You can add more than one
+   device. You can also drag and drop a `.csv` file, and it automatically adds multiple devices at
+   once. Then click **Next**.
 
 <img
-  src={useBaseUrl(
-    'img/use-the-network/devices/ready-to-use/rakwireless/rak2171/19.add-device.png',
-  )}
+  src={useBaseUrl('img/use-the-network/devices/ready-to-use/rakwireless/rak2171/19.add-device.png')}
 />
 
-6. Finally, choose a plan. For this example, choose the **Free** one. Click **Add 1 device** to finish.
+6. Finally, choose a plan. For this example, choose the **Free** one. Click **Add 1 device** to
+   finish.
 
 <img
   src={useBaseUrl(
@@ -257,4 +261,3 @@ integration, you need to set the device to work in
 />
 
 Everything in the Dashboard is pre-configured (fields, decoder, widgets), and it is ready to use.
-
